Partners image overlap bug patch -1

--- a/index.html
+++ b/index.html
@@ -375,6 +375,38 @@
         </div>
         <!-- Testimonial End -->
 
+        <!-- Portfolio Start -->
+        <div class="container-xxl py-5">
+            <div class="container px-lg-5">
+                <div class="section-title position-relative text-center mb-5 pb-2 wow fadeInUp" data-wow-delay="0.1s">
+                    <h6 class="position-relative d-inline text-primary ps-4">Q Partners</h6>
+                    <h2 class="mt-2">Our Honourable Partners</h2>
+                </div>
+                <!-- About Start -->
+        <div class="container-xxl py-5">
+            <div class="container px-lg-5">
+                <div class="row g-5">
+                    <div class="col-lg-6">
+                        <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="img/portfolio-1.jpg">
+                    </div>
+                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="section-title position-relative mb-4 pb-2">
+                            <!--
+
+                                <h6 class="position-relative text-primary ps-4">About Us</h6>
+                            -->
+                            <h2 class="mt-2">MSME's - Micro, Small, Medium Enterprises </h2>
+                        </div>
+                        <p class="mb-4">MSMEs are entities that are involved in production, manufacturing and processing of goods and commodities. The concept of MSME was first introduced by the government of India through the Micro, Small & Medium Enterprises Development (MSMED) Act, 2006.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- About End -->
+                </div>
+            </div>
+        </div>
+        <!-- Portfolio End -->
 
 <!-- Team Start -->
 <div class="container-xxl py-5">
