signUp primarily connected

--- a/signUp.html
+++ b/signUp.html
@@ -31,6 +31,9 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+
+
 </head>
 
 <body>
@@ -331,7 +334,15 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-    <script src="js/signUp.js"></script>
+
+    <!-- javascript for signUp -->
+    <script type="module" src="js/signUp.js"></script>
+    <!-- firebase script -->
+
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.17.2/firebase-auth.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.17.2/firebase-firestore.js"></script>
+
 </body>
 
 </html>
