event handlar working at login and logout button

--- a/signUp.html
+++ b/signUp.html
@@ -77,7 +77,7 @@
                         </div>
                         <div id="login">
 
-                            <!-- <a href="project.html" class="nav-item nav-link" id="login">Login</a> -->
+                            <!-- <a onclick="console.log('clicked')" href="#" class="nav-item nav-link" id="login">Login</a> -->
                         </div>
                         <div id="logout">
 
@@ -337,6 +337,7 @@
 
     <!-- javascript for signUp -->
     <script type="module" src="js/signUp.js"></script>
+    <script src="js/function.js"></script>
     <!-- firebase script -->
 
     <script type="module" src="https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js"></script>
