signout functionality added

--- a/signUp.html
+++ b/signUp.html
@@ -179,7 +179,7 @@
 
                                         <div class="d-flex justify-content-center">
                                             <button type="submit"
-                                                class="btn btn-primary btn-block  btn-lg   mt-2 w-100">Register</button>
+                                                class="btn btn-primary btn-block  btn-lg   mt-2 w-100">SignUp</button>
                                         </div>
 
                                         <p class="text-center  mt-2 mb-2">
