google login done

--- a/signUp.html
+++ b/signUp.html
@@ -181,36 +181,37 @@
                                             <button type="submit"
                                                 class="btn btn-primary btn-block  btn-lg   mt-2 w-100">SignUp</button>
                                         </div>
+                                    </form>
+                                    <p class="text-center  mt-2 mb-2">
+                                        Have already an account?
+                                        <a href="#!" class="fw-bold  text-primary">
+                                            <u>Login here</u>
+                                        </a>
+                                    </p>
 
-                                        <p class="text-center  mt-2 mb-2">
-                                            Have already an account?
-                                            <a href="#!" class="fw-bold  text-primary">
-                                                <u>Login here</u>
-                                            </a>
-                                        </p>
 
+                                    <div class="d-flex align-items-center my-2 ">
+                                        <hr
+                                            style="height:2px; width:100%; border-width:0; color:rgb(85, 79, 79); background-color:rgb(85, 79, 79)">
+                                        <h6>OR</h6>
+                                        <hr
+                                            style="height:2px; width:100%; border-width:0; color:rgb(85, 79, 79); background-color:rgb(85, 79, 79)">
+                                    </div>
 
-                                        <div class="d-flex align-items-center my-2 ">
-                                            <hr
-                                                style="height:2px; width:100%; border-width:0; color:rgb(85, 79, 79); background-color:rgb(85, 79, 79)">
-                                            <h6>OR</h6>
-                                            <hr
-                                                style="height:2px; width:100%; border-width:0; color:rgb(85, 79, 79); background-color:rgb(85, 79, 79)">
-                                        </div>
-
-                                        <button
-                                            class="btn btn-primary w-100 text-center d-flex align-items-center justify-content-center  ">
-                                            <i style="background: conic-gradient(from -45deg, #ea4335 110deg, #4285f4 90deg 180deg, #34a853 180deg 270deg, #fbbc05 270deg) 73% 55%/150% 150% no-repeat;
+                                    <button
+                                        class="btn btn-primary w-100 text-center d-flex align-items-center justify-content-center  "
+                                        id="googleButton">
+                                        <i style="background: conic-gradient(from -45deg, #ea4335 110deg, #4285f4 90deg 180deg, #34a853 180deg 270deg, #fbbc05 270deg) 73% 55%/150% 150% no-repeat;
                                                                             -webkit-background-clip: text;
                                                                             background-clip: text;
                                                                             color: transparent;
                                                                             -webkit-text-fill-color: transparent;"
-                                                class="fab fa-google fa-2x">
-                                            </i>
-                                            <span class="mx-3">SignUp With Google</span>
-                                        </button>
+                                            class="fab fa-google fa-2x">
+                                        </i>
+                                        <span class="mx-3">SignUp With Google</span>
+                                    </button>
 
-                                    </form>
+
 
                                 </div>
                             </div>
