user save to database successfuly

--- a/signUp.html
+++ b/signUp.html
@@ -68,7 +68,7 @@
                         <a href="about.html" class="nav-item nav-link">About Us</a><!--Q Founders-->
                         <div class="nav-item dropdown">
 
-                            <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Contact Us</a>
+                            <a href="#" class="nav-link dropdown-toggle " data-bs-toggle="dropdown">Contact Us</a>
                             <div class="dropdown-menu m-0">
                                 <a href="team.html" class="dropdown-item">Book a Meeting</a>
                                 <a href="contact.html" class="dropdown-item">Send a Message</a>
@@ -337,8 +337,8 @@
     <script src="js/main.js"></script>
 
     <!-- javascript for signUp -->
-    <script type="module" src="js/signUp.js"></script>
-    <script src="js/function.js"></script>
+    <script type="module" src="js/signUpJs/signUp.js"></script>
+    <!-- <script type="module" src="js/signUpJs/function.js"></script> -->
     <!-- firebase script -->
 
     <script type="module" src="https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js"></script>
