singUp, signOut, updatedisplayName, signUp with gmail is done

--- a/signUp.html
+++ b/signUp.html
@@ -184,7 +184,7 @@
                                     </form>
                                     <p class="text-center  mt-2 mb-2">
                                         Have already an account?
-                                        <a href="#!" class="fw-bold  text-primary">
+                                        <a href="/login.html" class="fw-bold  text-primary">
                                             <u>Login here</u>
                                         </a>
                                     </p>
