login page create

--- a/login.html
+++ b/login.html
@@ -152,13 +152,13 @@
                                             <label for="name">Your Name</label>
                                         </div>
                                         <div class="form-floating mb-2">
-                                            <input name="name" type="text" class="form-control" id="name"
+                                            <input name="email" type="email" class="form-control" id="email"
                                                 placeholder="Your Name">
-                                            <label for="name">Your Email</label>
+                                            <label for="email">Your Email</label>
                                         </div>
                                         <div class="form-floating mb-2">
-                                            <input name="name" type="text" class="form-control" id="name"
-                                                placeholder="Your Name">
+                                            <input name="password" type="password" class="form-control" id="password"
+                                                placeholder="Your Password">
                                             <label for="name">Your Password</label>
                                         </div>
 
@@ -167,8 +167,8 @@
                                         </a>
 
                                         <div class="d-flex justify-content-center">
-                                            <button type="button"
-                                                class="btn btn-primary btn-block  btn-lg   mt-2 w-100">Login</button>
+                                            <button type="button" class="btn btn-primary btn-block  btn-lg mt-2 w-100"
+                                                id="login-btn">Login</button>
                                         </div>
 
                                         <p class="text-center  mt-2 mb-0">
